Feat(web): printouts selection by copy counts
